   * BUFR (edition 3) mostly works
  geoloc
   * Add RotatedPole projection
  ft
   * Point Feature Types completely reworked, based on StructureData iterators
  NcML
   * Tiled aggregation
   * Existing accepts timeUnitsChange
   * Union accepts scan
   * Global attributes can be promoted to Variables.

 Libraries
  * JDOM 1.1
  * updated visad 9/12/08

 Release Details:
    23: new visad.jar (9/12/08)
        more BUFR fixes
        DateRange now moves when start or end date = "present"
        NetcdfFile.canOpen()
        GeoCoordSys: warn, dont fail, if x, y axis units not compatible with "km"
        mcidas area iosp
    22: improved BUFR reading
    21: Improve nexrad3 iosp
        GeoTiff: new projections
    20: StructureDS: get nested convert to work
        Mercator projection: remove lat0; grib parameters were interpreted wrong
        Allow opening GRIB files where we dont know the grid type, and so cant add coordinates
        HDF5 bug: filtered data (eg compressed) wasnt checking for byte order.
        add 'nodods':, 'slurp:' as aliases for http:
        enums return values, enhance will convert to Strings
        redo NetcdfDataset.EnhanceMode, use EnumSet
        ENUM1, ENUM2, ENUM4 enum types
        BUFR code tables (still experimental)
        BUFR "associated variables"
        VariableDS extends EnhanceScaleMissing, StructureDS and VariableEnhanced does not
    19: BUFR reading mostly works
        turn off debugging
        StructureDS.convert nested structures
    18: fix large file writing
        in agg, fix CacheVar, joinExisting persistance.
        move NetcdfDataset.makeArray to Array.makeArray, add new variant
        UnidataPointObsDataset does not require bounding box in global attributes
        NetcdfFileWriteable will allow object names to start with a digit
        ToolsUI : allow setting file caching
        add NcdumpW.printArray for vanilla array printing