@@ -9,7 +9,7 @@
 <body>
 <h1>Reading NetCDF from an HTTP Server </h1>
 <hr WIDTH="100%">
-<p> NetcdfFile can open remote files served over HTTP, if the  HTTP server  allows <em><strong>range requests</strong></em> for a resource, indicated by the  <a href="http://www.w3.org/Protocols/rfc2616/rfc2616-sec14.html#sec14.5">Accept-Ranges</a> header. </p>
+<p> NetcdfFile can open remote files served over HTTP, if the  HTTP server  allows <em><strong>range requests</strong></em> for a resource, indicated by the  <a href="http://www.w3.org/Protocols/rfc2616/rfc2616-sec14.html#sec14.5">Accept-Ranges</a> header (optional), and returns a <a href="http://www.w3.org/Protocols/rfc2616/rfc2616-sec14.html#sec14.13">Content-Length</a> header (required). Therefore, the server must not return the data as "chunked" transfer-coding, such as gzip.</p>
 <p>Performance will be strongly affected by the file format and the data access pattern. This is because each request for data will incur one or more file access requests. <em>Each</em> file acccess request becomes an HTTP request, incurring the cost of one round-trip message to the server. Generally, the netcdf-3 format (not netcdf-4) is most likely to give good performance, especially when reading large amounts of non-record data per request. Use OPeNDAP for more consistent performance. </p>
 <p>The THREDDS Data Server enables range requests by default. You may have to configure other HTTP servers. Following are our notes on how to do so.</p>
 <h3 wrap="">Enabling Accept-Ranges response header in <a href="http://httpd.apache.org/">Apache HTTP Server</a></h3>
@@ -34,10 +34,9 @@
   <li>  <a class="moz-txt-link-freetext" href="http://httpd.apache.org/docs/2.0/mod/mod_headers.html">http://httpd.apache.org/docs/2.0/mod/mod_headers.html</a></li>
 </ul>
 <p>&nbsp;</p>
-<h2>&nbsp;</h2>
 <hr WIDTH="100%">
 <address>
-<img src="../nc.gif" width="64" height="64"> This document is maintained by <a href="mailto:caron@unidata.ucar.edu">John Caron</a> and was last updated on Feb 8, 2008 
+<img src="../nc.gif" width="64" height="64"> This document is maintained by <a href="mailto:caron@unidata.ucar.edu">John Caron</a> and was last updated on Sep 22, 2008 
 </address>
 </body>
 </html>
