@@ -42,6 +42,8 @@ This code is ALPHA
   * updated visad 9/12/08
 
  Release Details:
+    24: cleanup error messages when catref or show catalog service fails to open remote catalog.
+        HTTPRandomAccessFile tolerates lack of "Accept-Ranges" header
     23: new visad.jar (9/12/08)
         more BUFR fixes
         DateRange now moves when start or end date = "present"
